@@ -16,7 +16,6 @@ exec-once = ~/dotfiles/hypr/scripts/gtk.sh
 
 # Using hypridle to start hyprlock
 exec-once = hypridle
-# exec-once = swayidle -w timeout 600 'swaylock -f' timeout 660 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f'
 
 # Load cliphist history
 exec-once = wl-paste --watch cliphist store
