@@ -9,7 +9,6 @@ $mainMod = SUPER
 # Applications
 bind = $mainMod, RETURN, exec, ~/dotfiles/.settings/terminal.sh
 bind = $mainMod, B, exec, ~/dotfiles/.settings/browser.sh
-bind = $mainMod, period, exec, emote
 
 # Windows
 bind = $mainMod, Q, killactive
@@ -45,6 +44,7 @@ bind = $mainMod CTRL, C, exec, ~/dotfiles/scripts/cliphist.sh
 bind = $mainMod, V, exec, ~/dotfiles/scripts/cliphist.sh
 bind = $mainMod CTRL, T, exec, ~/dotfiles/waybar/themeswitcher.sh
 bind = $mainMod CTRL, S, exec, ~/dotfiles/apps/ML4W_Dotfiles_Settings-x86_64.AppImage
+bind = $mainMod CTRL, P, exec, hyprpicker -a
 
 # Workspaces
 bind = $mainMod, 1, workspace, 1
