@@ -361,7 +361,7 @@
         "format-disabled": "",
         "format-off": "",
         "interval": 30,
-        "on-click": "blueman-manager",
+        "on-click": "overskride",
         "format-no-controller": ""
     },
 
